# local-llm-playground

./: .gitignore  README.md  pyproject.toml
data/: eval_set.json  eval_set_rag.json
experiments/: 01_smoke_test.py  02_qwen3_smallest.py  03_qwen3_4b_instruct.py  04_apple_clara.py  05_t5gemma_test.py
src/llm_playground/: core.py  evaluate.py  judge.py  loader.py
