[project]
name = "local-llm-playground"
version = "0.1.0"
description = "A lightweight framework for testing local LLMs"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "accelerate>=0.26.0",
    "bitsandbytes>=0.41.0",
    "python-dotenv>=1.0.0",
    "openai>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/llm_playground"]
