[project]
name = "local-llm-playground"
version = "0.1.0"
description = "A lightweight framework for testing local LLMs"
requires-python = ">=3.10"
dependencies = [
    "transformers>=4.57.3",
    "accelerate>=1.12.0",
    "torch>=2.9.1",
    "openai>=2.14.0",
    "python-dotenv>=1.2.1",
    "bitsandbytes>=0.49.0",
    "pillow>=12.0.0",
    "torchvision>=0.24.1",
    "peft>=0.18.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/llm_playground"]
